crates/glyph-cli/tests/corpus/invalid/gated_section_effects.glyph
skill demo()
    description: "Demo."
    effects:
        reads_files
    flow:
        "Do."
